# hosted-git-info-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs  proptest.rs
src/parser/: bitbucket.rs  gist.rs  github.rs  gitlab.rs  mod.rs
tests/: bitbucket.rs  gist.rs  github.rs  gitlab.rs  invalid.rs
