[package]
name = "hosted-git-info"
description = "Provides metadata and conversions from repository urls for GitHub, Bitbucket and GitLab"
version = "0.1.0"
authors = ["Tobias Bieniek <tobias.bieniek@gmail.com>"]
repository = "https://github.com/Turbo87/hosted-git-info-rs.git"
edition = "2018"
keywords = ["git", "github", "bitbucket", "gitlab"]
license = "ISC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = { version = "0.10.2", optional = true }
percent-encoding = "2.1.0"
thiserror = "1.0.26"
url = "2.2.2"

[dev-dependencies]
claim = "0.5.0"
